Attempted fix of scrolling issue when expanding search results on mobile

--- a/components/Search/ListItems/ListItems.module.scss
+++ b/components/Search/ListItems/ListItems.module.scss
@@ -21,7 +21,7 @@
   }
 
   &.mobile {
-    overflow: visible;
+    // overflow: visible;
   }
 }
 
